--- a/package.json
+++ b/package.json
@@ -1,18 +1,50 @@
-
 {
   "name": "react-native-carrot-flashlight",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "eslint-fix": "npx eslint --fix .",
+    "lint": "eslint ."
   },
   "keywords": [
-    "react-native"
+    "react-native",
+    "react-component",
+    "react-native-component",
+    "react",
+    "mobile",
+    "ios",
+    "android",
+    "util",
+    "flashlight",
+    "camera"
   ],
-  "author": "",
-  "license": "",
+  "author": {
+    "name": "wanglh",
+    "email": "zh-app-developer@aerozhonghuan.com"
+  },
+  "license": "MIT",
   "peerDependencies": {
-    "react-native": "^0.41.2"
+    "prop-types": ">=15.6.2",
+    "react": ">=16.5.0",
+    "react-native": ">=0.57.1"
+  },
+  "devDependencies": {
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "24.1.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.15.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "metro-react-native-babel-preset": "0.46.0"
+  },
+  "jest": {
+    "preset": "react-native",
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
